--- a/stsMvcProj/pom.xml
+++ b/stsMvcProj/pom.xml
@@ -74,6 +74,11 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>aaa</groupId>
+			<artifactId>springProj</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
